cmake_minimum_required(VERSION 2.8)
project( Homework2 )
find_package( OpenCV REQUIRED )
add_executable( handShape main.cpp )
add_executable( skinFilter skinFilter.cpp )
add_executable( boundingBox boundingBox.cpp )
add_executable( simpleTM simpleTM.cpp )
target_link_libraries( handShape ${OpenCV_LIBS} )
target_link_libraries( skinFilter ${OpenCV_LIBS} )
target_link_libraries( boundingBox ${OpenCV_LIBS} )
target_link_libraries( simpleTM ${OpenCV_LIBS} )
