cmake_minimum_required(VERSION 2.8)
project( Homework2 )
find_package( OpenCV REQUIRED )
add_executable( handShape main.cpp )
add_executable( skinFilter skinFilter.cpp )
add_executable( boundingBox boundingBox.cpp )
add_executable( simpleTM simpleTM.cpp )
add_executable( skinHSV skinHSV.cpp)
add_executable( templateMatching templateMatching.cpp)
add_executable( part2 part2.cpp)
target_link_libraries( handShape ${OpenCV_LIBS} )
target_link_libraries( skinFilter ${OpenCV_LIBS} )
target_link_libraries( boundingBox ${OpenCV_LIBS} )
target_link_libraries( simpleTM ${OpenCV_LIBS} )
target_link_libraries( skinHSV ${OpenCV_LIBS} )
target_link_libraries( templateMatching ${OpenCV_LIBS} )
target_link_libraries( part2 ${OpenCV_LIBS} )
