cmake_minimum_required(VERSION 2.8)
project( Homework3 )
find_package( OpenCV REQUIRED )
add_executable( filterHSV filterHSV.cpp )
add_executable( filesCount filesCount.cpp )
add_executable( multSeg multSeg.cpp )
add_executable( iterThres iterThres.cpp )
add_executable( iterThres_bat iterThres_bat.cpp )
add_executable( iterThres_cells iterThres_cells.cpp )
add_executable( multSeg multSeg.cpp )
add_executable( multSeg_bat multSeg_bat.cpp )
add_executable( multSeg_cells multSeg_cells.cpp )


target_link_libraries( filterHSV ${OpenCV_LIBS} )
target_link_libraries( filesCount ${OpenCV_LIBS} )
target_link_libraries( multSeg ${OpenCV_LIBS} )
target_link_libraries( iterThres ${OpenCV_LIBS} )
target_link_libraries( iterThres_bat ${OpenCV_LIBS} )
target_link_libraries(iterThres_cells ${OpenCV_LIBS})
target_link_libraries( multSeg ${OpenCV_LIBS} )
target_link_libraries( multSeg_bat ${OpenCV_LIBS} )
target_link_libraries( multSeg_cells ${OpenCV_LIBS} )
